kustomize/httpstub/base/ingresses.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: metabase-https
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     kubernetes.io/preserve-host: "true"
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
#     traefik.ingress.kubernetes.io/router.tls: "true"
# spec:
#   tls:
#   - hosts:
#       - metabase.nghz.net
#     secretName: research-cloud-certificates
#   rules:
#   - host: metabase.nghz.net
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: metabase
#             port:
#               number: 3000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpstub
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-http-to-https@kubernetescrd
spec:
  rules:
  - host: httpstub.mayongcong.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpstub
            port:
              number: 80
